# sfml-cmake-project

./: CMakeLists.txt  default.nix
src/: main.cpp
